# xy-multi-agents

./: ARCHITECTURE.md  CLAUDE.md  Dockerfile.console  Dockerfile.portal  README.md  docker-compose.yml  pyproject.toml  xy-cli.py
agents/architect/: agent.yaml
agents/backend/: agent.yaml
agents/design/: agent.yaml
agents/frontend/: agent.yaml
agents/pm/: agent.yaml
agents/presales/: agent.yaml
agents/product/: agent.yaml
agents/qa/: agent.yaml
config/: pipeline.yaml
console/server/: db.py  dependencies.py  main.py  requirements.txt  seed.py
console/web/: Dockerfile  package-lock.json  package.json  vite.config.ts
data/: console.db
docs/: AGENT_RESPONSIBILITIES.md  DESIGN.md  INTEGRATION.md  TASKS.md  vibe_coding_log.md
engine/: README.md  __init__.py  agent_executor.py  orchestrator.py  review_gate.py
portal/server/: main.py  requirements.txt
portal/web/: Dockerfile  package-lock.json  package.json  vite.config.ts
projects/a-2a31dcbc/: meta.json  state.json
projects/a-d2470034/: meta.json  state.json
projects/a-d8f9cc37/: meta.json  state.json
projects/art-762dd412/: meta.json  state.json
projects/art-e21a25b8/: meta.json  state.json
projects/art-f6ee4512/: meta.json  state.json
projects/art2-480b7dff/: meta.json  state.json
projects/art2-5a586095/: meta.json  state.json
projects/art2-67a593a3/: meta.json  state.json
projects/b-561a364f/: meta.json  state.json
projects/b-82cd45c2/: meta.json  state.json
projects/b-afaf8a70/: meta.json  state.json
projects/create-7d823563/: meta.json  state.json
tests/: test_core.py
(+86 files in other folders)
