[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xy-core"
version = "0.1.0"
description = "XY Multi-Agents 核心引擎"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["xy_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
